python-test_driven_development/tests/2-matrix_divided.txt
The ``2-matrix_divided.py`` module
==================================
This module contains only one function: matrix_divided. Error in project formatting scheme advances file numbering +1 for every task after 0.

Using ``matrix_divided``
------------------------

First import
~~~~~~~~~~~~
First import ``matrix_divided`` from the ``2-matrix_divided`` module. Since the file name contains a numeral, you can't use the simple ``from 2-matrix_divided import matrix_divided``. You can instead use the following syntax:

    >>> matrix_divided = __import__('2-matrix_divided').matrix_divided

Tests:

    >>> matrix = [ [1, 2, 3], [4, 5, 6] ]
    >>> print(matrix_divided(matrix, 3))
    [[0.33, 0.67, 1.0], [1.33, 1.67, 2.0]]
    
    >>> matrix = [ [1, 2.2, 3], [4.1, 5.1, 6] ]
    >>> print(matrix_divided(matrix, 3.14159))
    [[0.32, 0.7, 0.95], [1.31, 1.62, 1.91]]

    Test - matrix not a list
    >>> matrix = (1, 2, 3)
    >>> matrix_divided(matrix, 3)
    Traceback (most recent call last):
        ...
    TypeError: matrix must be a matrix (list of lists) of integers/floats
